# Demo_Cracy

./: .gitignore  Cargo.toml  README.md  cracy.db  cracy.db-shm  cracy.db-wal
after_voting/: Cargo.toml
after_voting/src/: count_votes.rs  lib.rs  reelection.rs  winner.rs
data/: Cargo.toml
data/src/: candidate_table.rs  create_database.rs  electorate_seed.rs  electorate_table.rs  lib.rs  results_table.rs  voting_table.rs
entrypoint/: Cargo.toml
entrypoint/src/: enter.rs  lib.rs
errors/: Cargo.toml
errors/src/: lib.rs  unique_rows.rs
src/: .main.rs.swp  main.rs
src/database/: .candidate_table.rs.swp  .create_database.rs.swp  .electorate_table.rs.swp  candidate_table.rs  create_database.rs  electorate_seed.rs  electorate_table.rs  eloctrate_table.rs  mod.rs
src/voting/: mod.rs  voting_table.rs
voting/: Cargo.toml
voting/src/: .voting_day.rs.swo  .voting_day.rs.swp  lib.rs  voting_day.rs  voting_table.rs
