[package]
name = "cracy"
version = "0.1.0"
edition = "2021"

[dependencies]
data = {path = "./data"}
voting = {path = "./voting"}
after_voting = {path = "./after_voting"}
entrypoint = {path = "./entrypoint"}

[workspace]
members = [
    "data", 
    "voting",
    "after_voting",
    "errors",
    "entrypoint"
]
