[package]
name = "after_voting"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"]}
data = {path = "../data"}
errors = {path = "../errors"}